syntax = "proto3";
option go_package = "pb";
package models;

import "guideocelot.proto";

//this is a direct translation of the ocelot.yaml file
message BuildConfig {
    string image = 1;
    // @inject_tag: yaml:"buildTool"
    string buildTool = 2;
    repeated string packages = 3;
    repeated string branches = 4;
    repeated string env = 5;
    repeated Stage stages = 7;
}

message Stage {
    repeated string env = 1;
    repeated string script = 2;
    string name = 3;
    // @inject_tag: yaml:"trigger"
    Triggers trigger = 4;
}

message Result {
    string stage = 1;
    StageResultVal status = 2;
    string error = 3;
    repeated string messages = 4;
}

message Triggers {
    repeated string branches = 1;
}

enum StageResultVal {
    PASS = 0;
    FAIL = 1;
}

message WerkerTask {
    string vaultToken = 1;
    string checkoutHash = 2;
    BuildConfig buildConf = 3;
    string vcsToken = 4;
    SubCredType vcsType = 9;
    string fullName = 6;
    int64 id = 7; // database id
    string branch = 8;
}

//don't think we'll need PushBuildBundle/PRBuildBundle, but keep until I know for sure//
//
//message PushBuildBundle {
//    BuildConfig config = 1;
//    RepoPush pushData = 2;
//    string vaultToken = 3;
//    string checkoutHash = 4;
//}
//
//message PRBuildBundle {
//    BuildConfig config = 1;
//    PullRequest prData = 2;
//    string vaultToken = 3;
//    string checkoutHash = 4;
//}